--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <meta http-equiv="Expires" content="0" />
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet'
@@ -27,7 +27,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/agency.min.css" rel="stylesheet">
+  <link href="assets/css/agency.min.css" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145389589-1"></script>
@@ -100,7 +100,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/luisromero.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="assets/img/team/luisromero.jpg" alt="">
             <h4>Luis Romero</h4>
             <p class="text-muted">Urban Planner</p>
             <ul class="list-inline social-buttons">
@@ -198,7 +198,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Arcpy report</h4>
@@ -213,7 +213,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>USB Route Finder</h4>
@@ -228,7 +228,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Busca Tu Arepa</h4>
@@ -485,7 +485,7 @@
                 <h2 class="text-uppercase">Arcpy report</h2>
                 <p class="item-intro text-muted">Python</p>
                 <p><b><a href="https://github.com/luishromero/arcpy-report/" target="_blank">View code in github</a></b></p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg?v=1.0" alt="">
+                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg?v=1.0" alt="">
                 <p>This Arcpy script creates a xlsx file that shows the number of null and blank rows by field of a gdb.
                   It creates a sheet by table and feature class, inside each sheet populate extra information.</p>
                 <p>This script needs a ArcGIS PRO licence available to run.</p>
@@ -517,7 +517,7 @@
                 <h2 class="text-uppercase">USB Route Finder</h2>
                 <p class="item-intro text-muted">Web App</p>
                 <p><b><a href="map/usb-routing.html" target="_blank">View project's page</a></b></p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg?v=2.0" alt="">
+                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full.jpg?v=2.0" alt="">
                 <p>This tool allows the Simón Bolivar University's Students to find the best route inside the campus to
                   go from one point to other. It is very useful to the new students who are not familiarized with the
                   location of the buildings where they have to take class.</p>
@@ -553,7 +553,7 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Busca Tu Arepa</h2>
                 <p class="item-intro text-muted">Web App</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02-full.jpg" alt="">
                 <p><b><a href="https://buscatuarepa.com/" target="_blank">View project's page</a></b></p>
                 <p>"Busca Tu Arepa" is a Web App that pursuit to be a tool used by anyone who wants to find a Venezuelan
                   restaurant. It was conceived principally for the Venezuelan Exodus could meet again with a piece of
@@ -576,18 +576,18 @@
   </div>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="assets/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Contact form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
+  <script src="assets/js/jqBootstrapValidation.js"></script>
+  <script src="assets/js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/agency.min.js"></script>
+  <script src="assets/js/agency.min.js"></script>
 
 </body>
 
